<resources>
    <string name="werewolves">Werewolves</string>
    <string name="of_the_millers_hollow">of The Millers Hollow</string>
    <string name="info">More Info</string>
    <string name="icon">Icon</string>
    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="documentation">Docs</string>
    <string name="back">Return</string>
    <string name="current_players">Players:</string>
    <string name="current_players_number">8</string>
    <string name="players_number">X</string>
    <string name="generate">Generate</string>
    <string name="start">Start</string>
    <string name="roll">Roll</string>
    <string name="roles_distribution">Distribution of Roles</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="roles_distributed">All roles distributed successfully</string>
    <string name="not_enough_player">Not enough players!</string>
    <string name="no_string"> </string>
    <string name="is_now_named">is now named</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="roles_not_distributed">Not all roles have been given a name !</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_captain">No Captain was found in the list!</string>
    <string name="no_villager">Not a single villager was found in the list!</string>
    <string name="no_wolves">Not a single wolf was found in the list!</string>
    <string name="unbalanced_teams">The composition of players does not allow for a balanced game!</string>
    <string name="was_killed">was killed</string>
    <string name="were_killed">were killed</string>
    <string name="nobody_was_killed">Nobody was killed. </string>
    <string name="bloc">Bloc</string>
    <string name="kick">Kick</string>
    <string name="more_options">More options</string>
    <string name="role_icon">Role Icon</string>
    <string name="use_ability">Use Ability</string>
    <string name="touch">Touch</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="empty_name_alert">Player name is empty !!!</string>
    <string name="existing_name_alert">Player name already exits !!!</string>
    <string name="should_use_power">Unable to proceed, This player should use his power on a target !</string>
    <string name="good_night">Good Night!</string>
    <string name="good_night_end_of_round">The night has come! Good night!</string>
    <string name="as">as</string>
    <string name="and">and</string>
    <string name="role">Role</string>
    <string name="none">Nobody</string>
    <string name="status_effect">Status Effect</string>
    <string name="turn">Turn</string>
    <string name="app_name">Werewolves of The Millers Hollow</string>
    <string name="player_name">Player Name</string>
    <string name="no_power">No remaining power for this player !</string>
    <string name="cant_use_power">Cannot use this ability for now !</string>
    <string name="section_about_the_game">About the game</string>
    <string name="section_about_the_game_desc">Contains general information about the game and its origins.</string>
    <string name="section_how_to_play">How to play with friends</string>
    <string name="section_how_to_play_desc">Contains important information about game setup and main rules and guidelines to follow.</string>
    <string name="section_characters">Game Characters (Roles)</string>
    <string name="section_characters_desc">Contains detailed description for each playable character in the original game.</string>
    <string name="section_advices_narrator">Advices for the narrator</string>
    <string name="section_advices_narrator_desc">Contains valuable advices for the narrator to make games more pleasant.</string>
    <string name="section_advices_players">Advices for the players</string>
    <string name="section_advices_players_desc">Contains valuable advices that can help players improve their tactics and win more games.</string>
    <string name="servant_name">Servant</string>
    <string name="servant_description">The Servant is a very particular role in the game. In the first night, she choose a player to take his power upon his death. She can use the ability of the dead player even if they were exhausted, they basically refresh for her (Except for the father of wolves if he has used his ability). And with that, this role can lead the player to side with any team and should be played with extreme intellect. Note that the servant does not inherit the status effect of the dead player.</string>
    <string name="servant_ability">Serve</string>
    <string name="servant_instructions">Choose a player, and upon his death you will take his power.</string>
    <string name="servant_effect">Servant Effect</string>
    <string name="servant_effect_description">This player is affected by the power of the servant, if he dies, his power will be transferred to the servant.</string>
    <string name="guardian_name">Guardian</string>
    <string name="guardian_ability">Protect</string>
    <string name="guardian_description">The savior is a villager who has a power of protection: Every night, the leader wakes him up before the wolves and asks him to choose a person who will be protected against the bite of the werewolves, who will not know that this person is protected, and therefore in the early morning the protected person will be alive. The infectious father of wolves cannot infect a person protected by the Savior because he can only infect a person devoured by werewolves first. The Savior has the right to protect himself. He is not allowed to protect the same person two nights in a row, but the same person is allowed multiple times during the game.</string>
    <string name="guardian_instruction">Choose a player to defend this night against the attacks of the wolves. You may guard yourself, but you cannot guard the same player twice in a row.</string>
    <string name="guardian_effect">Guardian Shield</string>
    <string name="guardian_effect_description">This player is being Shielded by the Guardian of the village. This shield is only effective against the attack of the wolves. In fact, it is useless against other players attack.</string>
    <string name="wolf_name">Werewolf</string>
    <string name="wolfpack_ability">Kill</string>
    <string name="wolfpack">Wolfpack</string>
    <string name="wolf_description">This is the basic werewolf of the game. Every night the simple werewolves are awakened by the ringleader so that they agree to choose the villager they will devour. The simple werewolf cannot devour one of his fellows during the night, but may well vote against him in the vote of the day. A werewolf in love cannot vote against his lover if he is a villager. If the werewolves do not unanimously agree on which villager to devour, the feast is canceled by the leader. His goal is to devour all the villagers to win the game. He must absolutely pretend to be a villager during the day phase so as not to be unmasked and then executed by the village during the day phase.</string>
    <string name="wolf_instruction">Assemble wolf pack, who will be the victim tonight?</string>
    <string name="infect_name">Infect The Father</string>
    <string name="infect_ability">Infect</string>
    <string name="infect_description">He is part of the werewolf family. When the leader awakens the werewolves, he chooses which villager to devour with them. Once the victim is chosen, the ringleader wakes up the evil father of wolves and asks him if he wants to "infect" the victim or not. If the evil father of wolves wishes to infect the victim, the latter does not die devoured but the infection transforms them into a werewolf immediately! If the infected player is a character with powers, his powers remain unchanged, except that from now on he will use them for the benefit of werewolves. The Foul Father of Wolves can only use his infect power once in the game, he can use it on any night he chooses, if at all. If the wicked father of wolves dies before he has used his infectious power, the infectious power is lost.</string>
    <string name="infect_instruction_nobody">Would you like to infect the targeted player?</string>
    <string name="infect_action_success">The target was successfully infected! Make the wolves know each other.</string>
    <string name="infect_action_fail">The target was not infected! Wake up wolves and know each other.</string>
    <string name="infect_wake_pack">Wake up wolves and know each other!</string>
    <string name="infection_effect">Infected</string>
    <string name="infection_effect_description">This player is infected by the power of the father of wolves, he can participate in the wolf pack.</string>
    <string name="infection_effect_touch">The one that I will touch will side with the wolves:</string>
    <string name="infection_touch">Touch</string>
    <string name="sorcerer_name">Sorcerer</string>
    <string name="sorcerer_ability_kill">Kill</string>
    <string name="sorcerer_ability_revive">Revive</string>
    <string name="sorcerer_description">The witch is part of the villagers camp. She is awakened by the ringleader every night after the werewolves. The ringleader then shows him the victim of the werewolves. The witch has two potions: the "LIFE" potion which can allow her to resurrect the victim of the werewolves, and a "DEATH" potion which allows her to eliminate a player. She can use each potion only once throughout the game. She may well not use her potions overnight. She can very well use only one potion overnight, or use both the same night if she wishes. The witch is allowed to use her “LIFE” potion on herself even if the werewolves had decided to devour her during their nighttime feast.</string>
    <string name="sorcerer_instruction_heal">Would you like to use your healing potion to revive this player?</string>
    <string name="sorcerer_instruction_kill">Would you like to use your poisonous potion to kill a player?</string>
    <string name="seer_name">Seer</string>
    <string name="seer_ability">See</string>
    <string name="seer_instruction">Choose a player to see his true nature. The seen role will be announced in the morning.</string>
    <string name="seer_description">The Seer/clairvoyant is a character who belongs to the villagers camp with a very interesting power: Every night, when the leader wakes her up, she has the ability to clearly see the role of the player of her choice. His goal is to pass his valuable information on to the village in order to eliminate the werewolves. Beware of her though, as she poses a great threat to werewolves, if spotted she would become one of the wolves, priority targets for their night time feast. It is up to her to be clever and careful in transmitting her information.</string>
    <string name="knight_name">Knight</string>
    <string name="knight_ability">Kill</string>
    <string name="knight_description">He belongs to the villagers camp. His sword is a great danger to werewolves: Indeed and once in the game, if the knight is targeted during the night feast by the werewolves or anyone else, he can choose someone to die instead.</string>
    <string name="knight_instruction_peace">No one tried to attack you this night.</string>
    <string name="knight_instruction_targeted">You have been targeted! Choose a player as a shield to die instead of you!</string>
    <string name="barber_name">Barber</string>
    <string name="barber_ability">Hunt</string>
    <string name="discussion">Discussion</string>
    <string name="vote">Vote</string>
</resources>