<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ImageView
        android:id="@+id/return_button"
        android:src="@drawable/ic_return"
        android:contentDescription="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="40dp"
        android:layout_height="40dp"
        />

    <TextView
        android:id="@+id/new_game_label"
        android:text="@string/new_game"
        android:textSize="@dimen/text_larger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/return_button"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/current_players_label"
        android:text="@string/current_players"
        android:textSize="@dimen/text_large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_game_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/current_players_count"
        app:layout_constraintBottom_toTopOf="@id/current_players_rv"
        android:layout_marginTop="32dp"
        />

    <EditText
        android:id="@+id/current_players_count"
        android:inputType="number"
        android:text="@string/current_players_number"
        android:hint="@string/players_number"
        android:textSize="@dimen/text_large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_game_label"
        app:layout_constraintLeft_toRightOf="@id/current_players_label"
        app:layout_constraintRight_toLeftOf="@id/generate"
        app:layout_constraintBottom_toTopOf="@id/current_players_rv"
        android:background="@null"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/players_number" />

    <Button
        android:id="@+id/generate"
        android:text="@string/generate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_game_label"
        app:layout_constraintLeft_toRightOf="@id/current_players_count"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/current_players_rv"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/current_players_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        android:id="@+id/current_players_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        />

    <Button
        android:id="@+id/roll_button"
        android:text="@string/roll"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/current_players_rv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/start_button"
        app:layout_constraintBottom_toTopOf="@id/roles_rv"/>

    <Button
        android:id="@+id/start_button"
        android:text="@string/start"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/current_players_rv"
        app:layout_constraintLeft_toRightOf="@id/roll_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/roles_rv"/>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/start_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/roles_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="8dp"
        android:layout_marginTop="8dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>