<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/role_icon"
        android:text="@string/roles_distribution"
        android:textSize="@dimen/text_large"
        />

    <ImageView
        android:id="@+id/role_icon"
        android:src="@drawable/ic_settings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/role" />

    <EditText
        android:id="@+id/player_name_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/role_icon"
        app:layout_constraintTop_toTopOf="@id/role_icon"
        app:layout_constraintBottom_toTopOf="@id/as"
        android:autofillHints="@string/player_name"
        android:hint="@string/player_name"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        android:inputType="textCapWords"
        android:maxLength="@integer/player_name_max_length"/>

    <TextView
        android:id="@+id/as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as"
        android:paddingHorizontal="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/role_icon"
        app:layout_constraintTop_toBottomOf="@id/player_name_box"
        app:layout_constraintLeft_toRightOf="@id/role_icon"
        android:textSize="@dimen/text_large"
        />

    <TextView
        android:id="@+id/player_role"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textAllCaps="true"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/role_icon"
        app:layout_constraintTop_toBottomOf="@id/player_name_box"
        app:layout_constraintLeft_toRightOf="@id/as"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/text_large"
        />

    <ImageView
        android:id="@+id/roll_button"
        android:src="@drawable/ic_flip"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/role_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/roll"
        android:foreground="?android:attr/selectableItemBackground"
        />

    <TextView
        android:id="@+id/cancel_button"
        android:text="@string/cancel"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/roll_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:foreground="?android:attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/reset_button"
        android:text="@string/reset"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/roll_button"
        app:layout_constraintRight_toRightOf="parent"
        android:foreground="?android:attr/selectableItemBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>